--- a/03_pyspark_basics/pyspark-basics.ipynb
+++ b/03_pyspark_basics/pyspark-basics.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "059b40b3-efab-4fc2-9363-1e7ae5a252b8",
      "showTitle": false,
@@ -23,10 +20,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "46cc7756-6af1-42fa-a745-dc673979234d",
      "showTitle": false,
@@ -46,10 +40,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "513fbf29-08b0-4aff-9ba2-57f20ca672f8",
      "showTitle": false,
@@ -65,10 +56,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ea309c55-fedb-4930-b1c6-a26226bf27fe",
      "showTitle": false,
@@ -113,10 +101,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5a1e4718-fb41-4c7e-8e5f-492743c93307",
      "showTitle": false,
@@ -132,10 +117,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3f30427d-ce26-4d70-985b-3fdbb9be91fa",
      "showTitle": false,
@@ -151,10 +133,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e0184fc6-e326-49de-9862-f0bb091d428e",
      "showTitle": false,
@@ -170,10 +149,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7e785022-a5e0-46e3-a2a8-f8fcd6044657",
      "showTitle": false,
@@ -245,10 +221,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3e187912-6fe4-47b0-af33-ac2878413ef5",
      "showTitle": false,
@@ -287,10 +260,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c31eebd5-8ba8-44c6-a052-1eaf162f7865",
      "showTitle": false,
@@ -306,10 +276,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "f6ac7124-eebf-42d6-b8de-2b7713095161",
      "showTitle": false,
@@ -355,10 +322,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b41ad82f-820b-405a-b182-6d0d38cba5e8",
      "showTitle": false,
@@ -374,10 +338,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "65c7548d-c39b-43ac-b470-dc547522e315",
      "showTitle": false,
@@ -435,7 +396,7 @@
     "# focus แค่ส่วนของ products พอ\n",
     "products = response.json()[\"products\"]\n",
     "\n",
-    "# ในข้อมูล จะมีส่วนที่ Spark ไม่สามารถจัดได้ว่าจะให้อยู่ใน Data Type แบบไหน เพราะบางที่ในส่วนนั้นข้อมูลยาวบ้าง สั้นบ้าง เราเลยจัดการข้อมูลตรงนี้ก่อน\n",
+    "# ในข้อมูล จะมีส่วนที่ Spark ไม่สามารถจัดได้ว่าจะให้อยู่ใน Data Type แบบไหน\n",
     "for p in products:\n",
     "    p[\"price\"] = float(p[\"price\"])\n",
     "    p[\"rating\"] = float(p[\"rating\"])\n",
@@ -450,10 +411,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7ed30cf4-cbed-4e61-bbf9-5f06a200626a",
      "showTitle": false,
@@ -531,10 +489,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "766ecb7f-c21a-4e45-ab0d-bd4f9416db90",
      "showTitle": false,
@@ -550,10 +505,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "afbf4fc3-c6a2-435a-83fe-0dd410514940",
      "showTitle": false,
@@ -592,10 +544,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "fa4f41cc-c4d7-4562-8b97-440a91bf4b0b",
      "showTitle": false,
@@ -632,10 +581,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0f854698-8090-4587-8066-e1877a8c3d86",
      "showTitle": false,
@@ -678,10 +624,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "04816df1-af36-4c7d-b019-99a784a2776a",
      "showTitle": false,
@@ -697,10 +640,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c5f550e1-9a8b-45b6-bc80-9701b9ff15ed",
      "showTitle": false,
@@ -716,10 +656,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a7372da0-f5d1-42b6-b1cf-78e311a76b73",
      "showTitle": false,
@@ -735,10 +672,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "85096d53-0658-4a36-88c4-7b3ac081d1d5",
      "showTitle": false,
@@ -780,10 +714,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "6adc63b3-022d-4468-9ae0-7e13d82056f2",
      "showTitle": false,
@@ -799,10 +730,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3719c4a3-3a95-45e7-9279-189ac4ee74d4",
      "showTitle": false,
@@ -922,10 +850,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "1b2df85b-b798-475f-ac86-cdc03ab2dc70",
      "showTitle": false,
@@ -1012,10 +937,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "6dd9d6f5-85ce-4eee-b71f-4349e36190a6",
      "showTitle": false,
@@ -1031,10 +953,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "26483d8c-6de2-44ab-a725-001565fb9e52",
      "showTitle": false,
@@ -1101,10 +1020,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a5bd099b-7b0d-4329-aeb0-862ced905506",
      "showTitle": false,
@@ -1120,10 +1036,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "361484db-53b0-46c9-b33f-bdeaafb29aef",
      "showTitle": false,
@@ -1181,10 +1094,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "6c188084-877d-42b5-a161-974c77c0eb7a",
      "showTitle": false,
@@ -1227,10 +1137,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8daeaaa1-490d-4be5-a335-3422abf4f0be",
      "showTitle": false,
@@ -1246,10 +1153,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c26a4380-65c2-4675-9359-effe006beaca",
      "showTitle": false,
@@ -1289,10 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e94352b9-7cdf-4f3b-bad8-ed16cdcc32d0",
      "showTitle": false,
@@ -1308,10 +1209,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "014271a3-eb41-4ddb-ae8b-0cc9af4d46a1",
      "showTitle": false,
@@ -1369,10 +1267,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "184b5bf9-ccd4-47f4-827e-bc7c8ddf7c27",
      "showTitle": false,
@@ -1388,10 +1283,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "da119ed6-6a91-4d20-9ab4-eff76e1e1561",
      "showTitle": false,
@@ -1528,10 +1420,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "8606022b-94ab-48d8-9dd5-b8b3a69b4e95",
      "showTitle": false,
@@ -1569,10 +1458,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "07f907b6-8c3b-4250-9edc-c6b78113ecdb",
      "showTitle": false,
@@ -1790,10 +1676,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "40df443e-72a5-42ab-9d9e-b33f60176f68",
      "showTitle": false,
@@ -1848,10 +1731,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "27dc4781-2888-40f1-8b1a-e07b4fe15aca",
      "showTitle": false,
@@ -1971,10 +1851,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "1099152d-e7b7-44ff-8335-7175c6948a21",
      "showTitle": false,
@@ -2085,10 +1962,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "4cf657bb-e37e-45fb-a7e5-40a1655afb98",
      "showTitle": false,
@@ -2203,10 +2077,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "94538605-e9df-4856-9979-df3742bfb279",
      "showTitle": false,
@@ -2270,10 +2141,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b267b3c2-fdf7-46de-9330-4b63bdffbbbc",
      "showTitle": false,
@@ -2511,10 +2379,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5147a8e4-ceed-438a-9e4a-c011944b50c5",
      "showTitle": false,
@@ -2530,10 +2395,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "fb12a07f-d2cb-4e57-9f65-b144f2500614",
      "showTitle": false,
@@ -2605,10 +2467,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "9c9b1d42-8228-4c5e-9054-94ae412cddd3",
      "showTitle": false,
