--- a/04_custom_datasource/pyspark-custom-data-sources.ipynb
+++ b/04_custom_datasource/pyspark-custom-data-sources.ipynb
@@ -682,7 +682,8 @@
     "            yield Row(\n",
     "                id = pr.get(\"number\"),\n",
     "                title = pr.get(\"title\"),\n",
-    "                user = pr.get(\"user\"),\n",
+    "                user = VariantVal.parseJson(json.dumps(pr.get(\"user\"))), \n",
+    "                # หรือจะใช้ user = pr.get(\"user\") เฉยๆก็ได้ เพราะเราระบุ type ของ schema เป็น str ไปแล้ว \n",
     "                created_at = pr.get(\"created_at\"),\n",
     "                updated_at = pr.get(\"updated_at\")\n",
     "            )"
@@ -1366,7 +1367,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6666765633529300,
+     "commandId": 7261827242726526,
      "dataframes": [
       "_sqldf"
      ]
